tdf#113548: another case of crash in GrabFocus during dispose

Change-Id: I70776b80f70985a122e28854177c6d0c43839d65
Reviewed-on: https://gerrit.libreoffice.org/44113
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Aron Budea <aron.budea@collabora.com>